--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
   "author": "KernelZechs",
   "license": "AGPL-3.0-only",
   "dependencies": {
+    "color-sorter": "^4.0.1",
     "glob": "^7.1.6",
-    "pngjs": "^6.0.0",
-    "tinycolor2": "^1.4.2"
+    "pngjs": "^6.0.0"
   },
   "scripts": {
     "start": "node ./src/index.js"
